--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "main.js",
   "type": "module",
   "scripts": {
-    "dev": "node --watch main.js",
-    "start": "node main.js"
+    "dev": "node --env-file .env --watch main.js",
+    "start": "node --env-file .env main.js"
   },
   "keywords": [],
   "author": "",
